--- a/yes.html
+++ b/yes.html
@@ -7,7 +7,8 @@
     <body>
         <div class="container">
             <div >
-                <h1 class = "header_text">Hurrayyyy!!</h1>
+                <h1 class = "header_text">Our date will be on Friday the 21st of February</h1>
+                <h1 class = "header_text">It will be dinner and a movie</h1>
             </div>
             <div class="gif_container">
                 <img src="https://media0.giphy.com/media/T86i6yDyOYz7J6dPhf/giphy.gif" alt="Cute animated illustration">
