--- a/yes.html
+++ b/yes.html
@@ -11,7 +11,7 @@
                 <h1 class = "header_text">It will be dinner and a movie</h1>
             </div>
             <div class="gif_container">
-                <img src="https://media0.giphy.com/media/T86i6yDyOYz7J6dPhf/giphy.gif" alt="Cute animated illustration">
+                <img src="https://media1.tenor.com/m/Fy9zovre5VAAAAAC/bubu-dudu-kisses.gif" alt="Cute animated illustration">
             </div>
         </div>
        
